--- a/core/demoApp/templates/form.html
+++ b/core/demoApp/templates/form.html
@@ -1,4 +1,4 @@
-<form action="/littlelemon/getform/" method="POST"> 
+<form action="/demo/getform/" method="POST"> 
     {% csrf_token %} 
     <p>Name: <input type="text" name="id"></p> 
     <p>UserID :<input type="name" name="name"></p> 
